Changelog
---------

1.0b14 (2009/03/31)
~~~~~~~~~~~~~~~~~~~

- Updated language adapter to work with 'structure' meta
  attribute. [malthe]

1.0b13 (2009/03/23)
~~~~~~~~~~~~~~~~~~~

- When traversing on dictionaries, only exposes dictionary items
  (never attributes); this is to avoid ambiguity. [sidnei, malthe]

- Path expressions need to pass further path items in reverse order to
  traversePathElement, because that's what it expects. [sidnei]

1.0b12 (2009/03/09)
~~~~~~~~~~~~~~~~~~~

- Insert initial variable context into dynamic scope. The presence of
  these is expected by many application. [malthe]

1.0b11 (2009/03/05)
~~~~~~~~~~~~~~~~~~~

- If a namespace-acquired object provides ``ITraversable``, use path
  traversal. [malthe]

- Implemented TALES function namespaces. [sidnei, malthe]

- Catch ``NameError`` in exists-traverser (return false). [malthe]

- Catch ``NameError`` in exists-evaluator (return false). [malthe]

- If the supplied ``context`` and ``request`` parameters are trivial,
  get them from the view instance. [malthe]

- Expressions in text templates are never escaped. [malthe]

- Do not bind template to a trivial instance. [malthe]

1.0b10 (2009/02/24)
~~~~~~~~~~~~~~~~~~~

- Fixed exists-traverser such that it always returns a boolean
  value. [malthe]

1.0b9 (2009/02/19)
~~~~~~~~~~~~~~~~~~

- When evaluating path-expressions at runtime (e.g. the ``path``
  method), run the source through the transform first to support
  dynamic scope. [malthe]

1.0b8 (2009/02/17)
~~~~~~~~~~~~~~~~~~

- Allow attribute access to ``__call__`` method on bound page
  templates. [malthe]

1.0b7 (2009/02/13)
~~~~~~~~~~~~~~~~~~

- Fixed issue where symbol mapping would not be carried through under
  a negation (not). [malthe]

- Optimize simple case: if path expression is a single path and path
  is 'nothing' or has 'nocall:', just return value as-is, without
  going through path_traverse. [sidnei]
